tests/errors/merge_bits_comp.f90
program merge_bits_comp
    print *, merge_bits(8, 12_8, 2)
end program
